--- a/BayesBinMix_models_new.qmd
+++ b/BayesBinMix_models_new.qmd
@@ -39,7 +39,7 @@ The following prior assumptions are imposed
 
 $$K \sim \text{Truncated Poisson}(\lambda = 1)$$
 
-$$p|K \sim \text{Dirichlet}(\gamma_1,..., \gamma_K)$$ We set $\gamma_1=...= \gamma_K =\gamma = 1/50$. We do this so that the prior distribution on the weight distribution of a mixture with $$K$$ components is chosen in such a way that a priori the number of clusters in the data is random and is allowed to be smaller than $$K$$ with high probability.<https://link.springer.com/article/10.1007/s11634-018-0329-y>
+$$p|K \sim \text{Dirichlet}(\gamma_1,..., \gamma_K)$$ We set $\gamma_1=...= \gamma_K =\gamma = 1/50$. We do this so that the prior distribution on the weight distribution of a mixture with $K$ components is chosen in such a way that the number of clusters in the data is random and is allowed to be smaller than $K$ with high probability.<https://link.springer.com/article/10.1007/s11634-018-0329-y>
 
 $$\theta_{kj} \sim \text{Beta}(\alpha=1, \beta=1)$$
 
@@ -48,7 +48,8 @@ $$\theta_{kj} \sim \text{Beta}(\alpha=1, \beta=1)$$
 censusdata_bin <- readRDS("./censusdata_bin_rownames.rds")
 names(censusdata_bin) <- c("acs5_2010_bin","acs5_2015_bin","acs5_2019_bin")
 
-res_all <- readRDS("./ACSall_results_withburnin_2.29.rds")
+#res_all <- readRDS("./ACSall_results_withburnin_2.29.rds")
+res_all<-readRDS("./ACSall_results_withburnin_2.29.rds")
 res_acs10<-res_all$res_acs10_10
 res_acs15<-res_all$res_acs15_10
 res_acs19<-res_all$res_acs19_10
@@ -61,13 +62,13 @@ print(res_acs15)
 print(res_acs19)
 ```
 
-| ACS Survey Year |                   $$                                                   
-                                                                                K_{max}    
-                                                                                     $$    |   7   |   8   |     9     |  10   |
-|---------|:------------------------:|:-------:|:-------:|:-------:|:-------:|
-| 2006-2010       |                                   10                                   |   0   | 0.112 | **0.476** | 0.412 |
-| 2011-2015       |                                   10                                   | 0.042 | 0.404 | **0.424** | 0.130 |
-| 2015-2019       |                                   10                                   | 0.032 | 0.258 |   0.420   | 0.290 |
+| ACS Survey Year |                     $$                                                                                                                                                                                                    
+                                                                                                                                                                                                                            K_{max}           
+                                                                                                                                                                                                                                        $$    |   7   |   8   |     9     |  10   |
+|--------------|:----------------:|:----:|:----:|:----:|:----:|
+| 2006-2010       |                                                                                                            10                                                                                                             |   0   | 0.112 | **0.476** | 0.412 |
+| 2011-2015       |                                                                                                            10                                                                                                             | 0.042 | 0.404 | **0.424** | 0.130 |
+| 2015-2019       |                                                                                                            10                                                                                                             | 0.032 | 0.258 | **0.420** | 0.290 |
 
 : **Table 1.** Estimated posterior distribution of the number of clusters for each survey wave.
 
@@ -76,6 +77,7 @@ print(res_acs19)
 ```{r}
 #Import functions from plots.R
 source("plots.R")
+#source("/Users/carmenrodriguez/Desktop/Research Projects/BayesBinMix/ecbayesbinmix/plots.R")
 library(viridis)
 sesvars<-c("Two People Per Room","Lack of complete Plumbing", "Median Household Income", ">= Bacherlor's Degree", "Below Poverty Line", "< High School",
            "Female Household", ">= High School","No Vehicle","Owner", "Renter", "Unemployment","White Collar Occupation", "SNAP Benefits")
@@ -119,7 +121,19 @@ p_10_indiv
 p_10_group
 
 #to describe patterns
-#dat_10 %>% group_by(cluster) %>% arrange(theta_kj,.by_group = T)
+#dat_10 %>% group_by(cluster) %>% arrange(desc(theta_kj),.by_group = T)
+
+dat_10_1<-dat_10 %>%  mutate(hml= case_when(
+                             theta_kj >=0.70 ~ 1,
+                             theta_kj< 0.70 & theta_kj >=0.4 ~ 2,
+                             theta_kj < 0.4 ~ 3,))
+
+dat_10_1$hml <- factor(dat_10_1$hml, levels = 1:3, labels = c("High", "Med", "Low"))
+
+
+out<-dat_10_1 %>%  group_by(cluster) %>% arrange(desc(theta_kj),.by_group = T) %>% select( cluster, NSES_VARS, theta_kj,hml)
+
+
 ```
 
 #### **Cluster mixing weights estimates**
@@ -152,7 +166,8 @@ classificationprobs_10$ClusterAssignment<- factor(classificationprobs_10$Cluster
 
 dat10_clusters<- classificationprobs_10 %>% select(GEOID,ClusterAssignment, maxProb)
 
-agedist<-load("./census_age_dist.RData")
+#agedist<-load("./census_age_dist.RData")
+agedist<-load("/Users/carmenrodriguez/Desktop/Research Projects/Census Data/census_age_dist.RData")
 
 #merge age dist with cluster informaiton-- these are proportions
 merged10<- merge(dat10_clusters, agedist10_wide, by= "GEOID")
@@ -175,7 +190,6 @@ dattable<- merged10 %>% rename(`Average Assignment Probability (ECR Algorithm)` 
 
 table1::table1(~`Average Assignment Probability (ECR Algorithm)` |`Cluster Assignment`, data= dattable, overall = F)
 
-
 ```
 
 ### **Plots** and Patterns for ACS 2011-2015
@@ -191,7 +205,7 @@ mapK<-Mode(res_acs15$K.mcmc)[1]  #tells you mapK
 
 fig_title = paste("Success Probabilities when mapK=", mapK, sep="")
 
-dat_15<-preparedat_fig(res_acs15_10,mapK,sesvars)
+dat_15<-preparedat_fig(res_acs15,mapK,sesvars)
 p_15_indiv<-plot_thetakj_indiv(prob_est_long = dat_15, mapK,color_palette = pastel_palette1, fig_title)
 p_15_group<-plot_thetakj_group(prob_est_long = dat_15, mapK,color_palette = group_cols, fig_title)
 
@@ -199,7 +213,17 @@ p_15_indiv
 p_15_group
 
 #to describe patterns
-#dat_15 %>% group_by(cluster) %>% arrange(theta_kj,.by_group = T)
+dat_15 %>% group_by(cluster) %>% arrange(desc(theta_kj),.by_group = T)
+
+dat_15_1<-dat_15 %>%  mutate(hml= case_when(
+                             theta_kj >=0.70 ~ 1,
+                             theta_kj< 0.70 & theta_kj >=0.4 ~ 2,
+                             theta_kj < 0.4 ~ 3,))
+
+dat_15_1$hml <- factor(dat_15_1$hml, levels = 1:3, labels = c("High", "Med", "Low"))
+
+
+out1<-dat_15_1 %>%  group_by(cluster) %>% arrange(desc(theta_kj),.by_group = T) %>% select( cluster, NSES_VARS, theta_kj, hml)
 
 
 ```
@@ -208,7 +232,7 @@ p_15_group
 
 ```{r}
 #Class probabilities
-stats<-cbind(summary(res_acs15_10$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs15_10$parameters.ecr.mcmc)$quantiles[,c(1,5)])
+stats<-cbind(summary(res_acs15$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs15$parameters.ecr.mcmc)$quantiles[,c(1,5)])
 
 tail(stats, mapK) %>% kable()
 ```
@@ -216,11 +240,11 @@ tail(stats, mapK) %>% kable()
 #### Age Distribution of the census tracts
 
 ```{r}
-#For ACS 2015 and mapK = 4
-classificationprobs_15<-res_acs15_10$classificationProbabilities.ecr
+#For ACS 2015 and mapK = 9
+classificationprobs_15<-res_acs15$classificationProbabilities.ecr
 # Add cluster classification based on maximum probability 
 maxProb<-apply(classificationprobs_15, 1, max)
-ClusterAssignment<-res_acs15_10$clusterMembershipPerMethod[,2]
+ClusterAssignment<-res_acs15$clusterMembershipPerMethod[,2]
 
 classificationprobs_15$ClusterAssignment<-ClusterAssignment
 classificationprobs_15$maxProb<-maxProb
@@ -228,7 +252,8 @@ classificationprobs_15$maxProb<-maxProb
 #Prep Data 
 classificationprobs_15$GEOID<-row.names(censusdata_bin$acs5_2015_bin)
 
-classificationprobs_15$ClusterAssignment<- factor(classificationprobs_15$ClusterAssignment, levels = 1:4, labels = c("cluster 1", "cluster 2", "cluster 3", "cluster 4"))
+
+classificationprobs_15$ClusterAssignment<- factor(classificationprobs_15$ClusterAssignment, levels = 1:9, labels = paste0("cluster", 1:9, sep= " "))
 
 
 dat15_clusters<- classificationprobs_15 %>% select(GEOID,ClusterAssignment, maxProb)
@@ -252,7 +277,7 @@ table1::table1(~ age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age
 #### Distribution of assignment probabilities to the most probable cluster
 
 ```{r}
-merged15%>%  ggplot(aes(x = ClusterAssignment, y = maxProb, fill = ClusterAssignment)) +
+merged15 %>% ggplot(aes(x = ClusterAssignment, y = maxProb, fill = ClusterAssignment)) +
   geom_boxplot() +
   labs(fill = "Cluster Assignment", 
        y = "Assignment Probability after ECR algorithm", 
@@ -279,15 +304,15 @@ mapK<-Mode(res_acs19$K.mcmc)[1]  #tells you mapK
 
 fig_title = paste("Success Probabilities when mapK=", mapK, sep="")
 
-dat_15<-preparedat_fig(res_acs15_10,mapK,sesvars)
-p_15_indiv<-plot_thetakj_indiv(prob_est_long = dat_15, mapK,color_palette = pastel_palette1, fig_title)
-p_15_group<-plot_thetakj_group(prob_est_long = dat_15, mapK,color_palette = group_cols, fig_title)
+dat_19<-preparedat_fig(res_acs19,mapK,sesvars)
+p_19_indiv<-plot_thetakj_indiv(prob_est_long = dat_19, mapK,color_palette = pastel_palette1, fig_title)
+p_19_group<-plot_thetakj_group(prob_est_long = dat_19, mapK,color_palette = group_cols, fig_title)
 
-p_15_indiv
-p_15_group
+p_19_indiv
+p_19_group
 
 #to describe patterns
-#dat_15 %>% group_by(cluster) %>% arrange(theta_kj,.by_group = T)
+#dat_19 %>% group_by(cluster) %>% arrange(theta_kj,.by_group = T)
 
 
 ```
@@ -296,7 +321,7 @@ p_15_group
 
 ```{r}
 #Class probabilities
-stats<-cbind(summary(res_acs15_10$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs15_10$parameters.ecr.mcmc)$quantiles[,c(1,5)])
+stats<-cbind(summary(res_acs19$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs19$parameters.ecr.mcmc)$quantiles[,c(1,5)])
 
 tail(stats, mapK) %>% kable()
 ```
@@ -305,24 +330,24 @@ tail(stats, mapK) %>% kable()
 
 ```{r}
 #For ACS 2015 and mapK = 4
-classificationprobs_15<-res_acs15_10$classificationProbabilities.ecr
+classificationprobs_19<-res_acs19$classificationProbabilities.ecr
 # Add cluster classification based on maximum probability 
-maxProb<-apply(classificationprobs_15, 1, max)
-ClusterAssignment<-res_acs15_10$clusterMembershipPerMethod[,2]
+maxProb<-apply(classificationprobs_19, 1, max)
+ClusterAssignment<-res_acs19$clusterMembershipPerMethod[,2]
 
-classificationprobs_15$ClusterAssignment<-ClusterAssignment
-classificationprobs_15$maxProb<-maxProb
+classificationprobs_19$ClusterAssignment<-ClusterAssignment
+classificationprobs_19$maxProb<-maxProb
 
 #Prep Data 
-classificationprobs_15$GEOID<-row.names(censusdata_bin$acs5_2015_bin)
+classificationprobs_19$GEOID<-row.names(censusdata_bin$acs5_2019_bin)
 
-classificationprobs_15$ClusterAssignment<- factor(classificationprobs_15$ClusterAssignment, levels = 1:4, labels = c("cluster 1", "cluster 2", "cluster 3", "cluster 4"))
+classificationprobs_19$ClusterAssignment<- factor(classificationprobs_19$ClusterAssignment, levels = 1:9, labels = paste0("cluster", 1:9, sep= " "))
 
 
-dat15_clusters<- classificationprobs_15 %>% select(GEOID,ClusterAssignment, maxProb)
+dat19_clusters<- classificationprobs_19 %>% select(GEOID,ClusterAssignment, maxProb)
 
 #merge age dist with cluster informaiton-- these are proportions
-merged15<- merge(dat15_clusters, agedist15_wide, by= "GEOID")
+merged19<- merge(dat19_clusters, agedist19_wide, by= "GEOID")
 # merged15<-merged15 %>% mutate(cluster_new = case_when(
 #         ClusterAssignment == "cluster 1" ~ 2,
 #         ClusterAssignment == "cluster 2" ~ 1,
@@ -334,22 +359,22 @@ merged15<- merge(dat15_clusters, agedist15_wide, by= "GEOID")
 
 
 table1::table1(~ age_20_24 + age_25_34 + age_35_44 + age_45_54 + age_55_59 + age_60_64 + age_65_74 + age_75_84 + age_85_more + age_median |ClusterAssignment, 
-               data= merged15, overall = F)
+               data= merged19, overall = F)
 ```
 
 #### Distribution of assignment probabilities to the most probable cluster
 
 ```{r}
-merged15%>%  ggplot(aes(x = ClusterAssignment, y = maxProb, fill = ClusterAssignment)) +
+merged19%>%  ggplot(aes(x = ClusterAssignment, y = maxProb, fill = ClusterAssignment)) +
   geom_boxplot() +
   labs(fill = "Cluster Assignment", 
        y = "Assignment Probability after ECR algorithm", 
        x= "")
 
-dattable15<-merged15 %>% rename(`Average Assignment Probability (ECR Algorithm)` = maxProb,
+dattable19<-merged19 %>% rename(`Average Assignment Probability (ECR Algorithm)` = maxProb,
                     `Cluster Assignment` = ClusterAssignment) 
 
 table1::table1(~`Average Assignment Probability (ECR Algorithm)` |`Cluster Assignment`, 
-               data= dattable15, overall = F)
+               data= dattable19, overall = F)
 
 ```
